.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Case__c.object
<CustomObject>
    <description>Test Cases define the scope of an individual test case to verify a specific part of an application is working as expected. Test Cases should be as re-usuable as possible and rely on data files that can be substituted to vary their behaviour and expected results.</description>
    <fields>
        <fullName>provar__Average_Execution_Time_ReadOnly__c</fullName>
        <formula>provar__Average_Execution_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Execution Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Average_Execution_Time__c</fullName>
        <label>Average Execution Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <description>Description should include details of the aims of the test plus any consequences of it finding a failure.</description>
        <inlineHelpText>Provide a description of what the test should cover and its purpose.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Estimated_Execution_Time__c</fullName>
        <label>Estimated Execution Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Expected_Result__c</fullName>
        <label>Expected Result (Deprecated)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test cases from other platforms.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to match test cases from other platforms.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__File_Path__c</fullName>
        <description>Used to store relative or absolute file paths for test cases that exist as files somewhere else</description>
        <inlineHelpText>Used to store relative or absolute file paths for test cases that exist as files somewhere else</inlineHelpText>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Goals__c</fullName>
        <label>Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Is_Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies if the test case is executed automatically (e.g. as part of a CI/CD pipeline)</inlineHelpText>
        <label>Is Automated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Last_Updated__c</fullName>
        <inlineHelpText>Date/time this test case&apos;s definition was last saved</inlineHelpText>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Maximum_Execution_Time__c</fullName>
        <label>Maximum Execution Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__No_of_Steps__c</fullName>
        <description>Number of test steps in this test case which is used to calculate the default next step number when we create a new test step.</description>
        <inlineHelpText>The number of test steps currently defined for this test case</inlineHelpText>
        <label>Number of Steps</label>
        <summaryForeignKey>provar__Test_Step__c.provar__Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Test_Suites__c</fullName>
        <label>Number of Test Suites</label>
        <summaryForeignKey>provar__Test_Suite_Case__c.provar__Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona</label>
        <referenceTo>provar__Persona__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Pending Implementation</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Pending Activation</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                    <label>Under Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Automation_Tool__c</fullName>
        <label>Test Automation Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                    <label>Salesforce (Apex)</label>
                </value>
                <value>
                    <fullName>ProvarAutomation</fullName>
                    <label>Provar Automation</label>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Owner</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Charter__c</fullName>
        <label>Test Charter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Test_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Project</label>
        <referenceTo>provar__Test_Project__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Type__c</fullName>
        <label>Test Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Testing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Time_Allowed__c</fullName>
        <description>The expected amount of time for this test case to be performed. In the case of an exploratory test this is a limit, for execution tests performed using automation tools it can be used to validate the performance</description>
        <inlineHelpText>Enter the time allowed for exploratory testing, or the expected time to allow for functional testing. This can help you plan resources more accurately</inlineHelpText>
        <label>Time Allowed</label>
        <type>Time</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Test_Type__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Test_Case_Owner__c</columns>
        <columns>provar__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Functional_Tests</fullName>
        <columns>NAME</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Test_Case_Owner__c</columns>
        <columns>provar__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Test_Type__c</field>
            <operation>equals</operation>
            <value>Functional testing</value>
        </filters>
        <label>All Functional Tests</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Unit_Tests</fullName>
        <columns>NAME</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Priority__c</columns>
        <columns>provar__Test_Case_Owner__c</columns>
        <columns>provar__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Test_Type__c</field>
            <operation>equals</operation>
            <value>Unit testing</value>
        </filters>
        <label>All Unit Tests</label>
    </listViews>
    <nameField>
        <label>Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>provar__Maximum_Execution_Bigger_Than_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL(provar__Maximum_Execution_Time__c)) &amp;&amp; provar__Maximum_Execution_Time__c &lt; 0</errorConditionFormula>
        <errorMessage>The Maximum Execution Time must be a number bigger or equal to zero.</errorMessage>
    </validationRules>
</CustomObject>